creusot/tests/should_fail/prusti/deref/box1.stderr
error[creusot]: invalid shr dereference of expression with home `'old` and lifetime `'old` at time-slice `'curr`
  --> box1.rs:14:22
   |
14 | #[ensures(result == *old(x.0.mk_ref()))]
   |                      ^^^^^^^^^^^^^^^^^

error: aborting due to previous error

